# LightFinder_GPU

./: .gitignore  CMakeLists.txt  readme.md
dependencies/tinyxml2/: CMakeLists.txt
resources/: In.xml
sources/: CMakeLists.txt
sources/dll/: CMakeLists.txt
sources/dll/headers/: BelnderScriptCreator.h  Camera.h  Exception.h  LightSource.h  Log.h  MyException.h  MyXMLReader.h  Pair.h  Point.h  Scene.h  Trace.cuh  Triangle.h  Vector.h  kernel.cuh
sources/dll/sources/: BelnderScriptCreator.cpp  Camera.cpp  Exception.cpp  LightSource.cpp  Log.cpp  MyException.cpp  MyXMLReader.cpp  Pair.cpp  Point.cpp  Scene.cpp  Trace.cu  Triangle.cpp  Vector.cpp  kernel.cu
sources/main/: CMakeLists.txt  main.cpp  main.h
tests/: CMakeLists.txt  CMakeLists.txt.in
tests/CUDA_Tests/: BlenderScriptCreatorTest.cpp  CMakeLists.txt  LightSourceTest.cpp  MyXMLReaderTest.cpp  PointTest.cpp  TriengleTest.cpp  VectorTest.cpp  main.cpp
